chore(rich-editor): heights of input to be dynamic, and spacing fixed

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -157,7 +157,7 @@ body {
   color: #475569 !important;
 }
 
-#reset-des {
+.listing-description {
   >*:first-child {
     margin-top: 1rem !important; // Adjusts top padding for the first paragraph
   }
